--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,7 @@
   grid-template-rows: 1fr 10fr;
   grid-template-columns: 2fr 12fr;
 }
+.content {
+  background-color: yellowgreen;
+  grid-area: cont;
+}
