--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,7 +1,24 @@
-.title {
+.Dialogs {
   color: antiquewhite;
-  font-size: 30px;
-  font-weight: 700;
-  display: flex;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: 2fr 8fr;
+}
+
+.dialogsItems {
+  padding: 5px;
+}
+.dialog {
+  margin: 4px;
+  background-color: black;
+  padding-left: 20px;
+  border: 2px solid rgb(27, 2, 85);
+  border-radius: 7px;
+}
+.active {
+  box-shadow: -3px -3px rgb(247, 242, 242);
+}
+
+.massages {
+}
+.massage {
 }
