--- a/src/components/navBar/Nav-bar.module.css
+++ b/src/components/navBar/Nav-bar.module.css
@@ -8,14 +8,16 @@
   font-size: x-large;
   font-style: italic;
 }
-.item a {
+.item {
   color: blue;
-  font-size: x-large;
+  font-size: large;
   font-style: italic;
   text-decoration: none;
 }
-.item .active {
+.active {
+  font-size: x-large;
   border-radius: 7px;
-  background-color: rgba(236, 123, 9, 0.932);
-  color: black;
+  background-color: rgba(233, 135, 38, 0.603);
+  color: rgb(255, 251, 251);
+  text-decoration: none;
 }
